--- a/02-bases/src/app/app.component.html
+++ b/02-bases/src/app/app.component.html
@@ -1,7 +1,11 @@
 <h1>{{ title }}</h1>
 
 <hr />
-<app-counter></app-counter>
-<app-heroes-hero></app-heroes-hero>
-<app-heroes-list></app-heroes-list>
+<!-- Modulo 4 -->
+<!-- <app-counter></app-counter> -->
+<!-- <app-heroes-hero></app-heroes-hero> -->
+<!-- <app-heroes-list></app-heroes-list> -->
+
+<!-- Modulo 5 -->
+<app-dbz-main-page></app-dbz-main-page>
 
