--- a/04-countryApp/src/app/app.component.html
+++ b/04-countryApp/src/app/app.component.html
@@ -1,1 +1,8 @@
-<h1>Hola Mundo Inmundo</h1>
+<div class="row mt-4">
+  <div class="col-3">
+    <shared-sidebar></shared-sidebar>
+  </div>
+  <div class="col">
+    <router-outlet></router-outlet>
+  </div>
+</div>
