Se crea un event emiter, permite lanzar un evento y captarlo desde otro componente

--- a/04-countryApp/src/app/shared/components/search-box/search-box.component.html
+++ b/04-countryApp/src/app/shared/components/search-box/search-box.component.html
@@ -1,4 +1,6 @@
-<input type="text"
+<input #txtInput
+       type="text"
        [placeholder]=placeholder
        class="form-control"
+       (keyup.enter)="emitValue(txtInput.value)"
 >
