--- a/04-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/04-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -4,7 +4,9 @@
 <div class="row">
   <div class="col">
     <!-- SeachBox-->
-    <shared-search-box placeholder='Buscar por capital'></shared-search-box>
+    <shared-search-box
+      (onValue)="searchByCapital($event.valueOf())"
+      placeholder='Buscar por capital'></shared-search-box>
   </div>
 </div>
 
