--- a/04-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/04-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -12,7 +12,7 @@
 
 <div class="row">
   <div class="col">
-    <!-- Tabla resultados-->
-    Resultados
+    <hr>
+    <countries-table [countries]="countries"></countries-table>
   </div>
 </div>
