--- a/04-countryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/04-countryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -1,1 +1,18 @@
-<p>by-region-page works!</p>
+<h2>Por Región</h2>
+<hr>
+
+<div class="row">
+  <div class="col">
+    <!-- SeachBox-->
+    <shared-search-box
+      (onValue)="searchByRegion($event.valueOf())"
+      placeholder='Buscar por región'></shared-search-box>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col">
+    <hr>
+    <countries-table [countries]="countries"></countries-table>
+  </div>
+</div>
