--- a/04-countryApp/src/app/countries/components/country-table/country-table.component.html
+++ b/04-countryApp/src/app/countries/components/country-table/country-table.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <ng-template #table>
-  <table class="table">
+  <table class="table table-hover">
     <thead>
     <tr>
       <th>#</th>
@@ -24,8 +24,9 @@
       <td>{{ country.name.common }}</td>
       <td>{{ country.capital }}</td>
       <td>{{ country.population | number }}</td>
-      <td>{{ country.timezones }}</td>
-      <td><a [routerLink]="['/countries/by', country.cca3]" >Info</a></td>
+      <td *ngIf="country.timezones.length === 1">{{ country.timezones[0] }}</td>
+      <td *ngIf="country.timezones.length !== 1">{{ country.timezones[0] }} y {{country.timezones.length - 1}} mas.</td>
+      <td><a [routerLink]="['/countries/by', country.cca3]">Info</a></td>
     </tr>
     </tbody>
 
