--- a/04-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/04-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -1,11 +1,12 @@
 <h2>Por Capital</h2>
 <hr>
-
+<!--(onValue)="searchByCapital($event.valueOf())"-->
 <div class="row">
   <div class="col">
     <!-- SeachBox-->
     <shared-search-box
-      (onValue)="searchByCapital($event.valueOf())"
+      (onDebounce)="searchByCapital($event.valueOf())"
+      [initialValue]="initialValue"
       placeholder='Buscar por capital'></shared-search-box>
   </div>
 </div>
@@ -16,3 +17,4 @@
     <countries-table [countries]="countries"></countries-table>
   </div>
 </div>
+<shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
