--- a/04-countryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/04-countryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -6,6 +6,7 @@
     <!-- SeachBox-->
     <shared-search-box
       (onValue)="searchByCountry($event.valueOf())"
+      [initialValue]="initialValue"
       placeholder='Buscar por nombre de país'></shared-search-box>
   </div>
 </div>
@@ -16,3 +17,4 @@
     <countries-table [countries]="countries"></countries-table>
   </div>
 </div>
+<shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
