--- a/04-countryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/04-countryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -2,11 +2,17 @@
 <hr>
 
 <div class="row">
-  <div class="col">
+  <div class="col text-center">
     <!-- SeachBox-->
-    <shared-search-box
-      (onValue)="searchByRegion($event.valueOf())"
-      placeholder='Buscar por región'></shared-search-box>
+    <!--<shared-search-box
+      (onDebounce)="searchByRegion($event.valueOf())"
+      placeholder='Buscar por región'></shared-search-box>-->
+    <button *ngFor="let region of regions"
+            class="btn mx-2"
+            [ngClass]="{'btn-outline-primary': selectedRegion === region}"
+            (click)="searchByRegion(region)">
+      {{ region }}
+    </button>
   </div>
 </div>
 
@@ -16,3 +22,4 @@
     <countries-table [countries]="countries"></countries-table>
   </div>
 </div>
+<shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
