--- a/04-countryApp/src/app/shared/components/search-box/search-box.component.html
+++ b/04-countryApp/src/app/shared/components/search-box/search-box.component.html
@@ -3,4 +3,6 @@
        [placeholder]=placeholder
        class="form-control"
        (keyup.enter)="emitValue(txtInput.value)"
+       (keyup)="onKeyPress(txtInput.value)"
+       [value]="initialValue"
 >
